# 402routes

./: .gitignore  AGENTS.MD  ARCHITECTURE.md  GUARDIAN_IMPLEMENTATION_GUIDE.md  GUARDIAN_README.md  HACKATHON_GUIDE.md  README.md  TECHNICAL.md  USERFLOWS.md  create-agent-wallet.js  userflow_1.md  userflow_3.md
agent/: .env.example  .gitignore  AUTONOMOUS_PAYMENT_GUIDE.md  README.md  README_GUARDIAN.md  dev.py  guardian.db  main.py  pyproject.toml
agent/app/: __init___new.py  agent_wallet.py  ai_analyzer.py  config.py  database.py  guardian_service.py  main.py  schemas.py
backend/: .env.example  .gitignore  README.md  db.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/config/: x402.config.ts
backend/src/controllers/: guardian.controller.ts  marketplace.controller.ts
backend/src/middlewares/: x402.middleware.ts
backend/src/routes/: guardian.routes.ts  index.ts  marketplace.routes.ts
backend/src/services/: guardian.service.ts  marketplace.service.ts
backend/src/types/: index.ts
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ApiCard.tsx  ApiExecutor.tsx  BudgetGuardianDashboard.tsx  CreateApiForm.tsx  DiscoveryApiCard.tsx  FAQSection.tsx  GuardianNotifications.tsx  GuardianSetup.tsx  Header.tsx  Navigation.tsx  StatsSection.tsx  WalletDropdown.tsx
frontend/app/dashboard/: page.tsx
frontend/app/discover/: page.tsx
frontend/app/guardian/: page.tsx
frontend/app/my-apis/: page.tsx
frontend/app/publish/: page.tsx
test/: README.md  index.html  package-lock.json  package.json
test/src/: App.tsx  index.css
(+12 files in other folders)
