[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-budget-guardian"
version = "0.1.0"
description = "AI Budget Guardian - Intelligent API spending monitor and optimizer for 402Routes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "402Routes Team", email = "team@402routes.com" }
]

keywords = [
  "ai",
  "budget",
  "guardian",
  "api-monitoring",
  "cost-optimization",
  "x402",
  "cronos",
  "openai",
  "deepseek",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
  "Framework :: FastAPI",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "fastapi[standard]>=0.128.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.7.1",
  "pydantic-settings>=2.0.0",
  "openai>=1.0",
  "crypto-com-developer-platform-client>=1.1.1",
  "web3>=6.15.1",
  "eth-account>=0.10.0",
  "sqlalchemy[asyncio]>=2.0.29",
  "aiosqlite>=0.19.0",
  "rich>=13.7.0",
  "typing-extensions>=4.12.2",
  "schedule>=1.2.0",
  "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "mypy",
  "pytest",
  "pytest-asyncio",
]

[tool.uv]
dev-dependencies = [
  "fastapi-cli",
]
